<resources>
    <string name="app_name">ECommerence</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in_with_mobile">Sign in with mobile</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="need_an_account">Need an account?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_up">sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="email">Email Address</string>
    <string name="agreement">By pressing Sign Up you agree with the Terms of Services and Privacy Policy</string>
    <string name="forget_passwrod">Forget password?</string>
    <string name="example">example</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="logout">Logout</string>
    <string name="my_order">My Order</string>
    <string name="shop">Shop</string>
    <string name="profile">Profile</string>
    <string name="update">update</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="reset_password">Reset password</string>
    <string name="m_profile">My Profile</string>
    <string name="m_home">Home</string>
    <string name="m_order">My Order</string>
    <string name="apply">Apply</string>
    <string name="tax">Tax</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="check_out">Proceed to Checkout</string>
    <string name="coupon_code">Coupon code</string>
    <string name="confirm">Confirm</string>
    <string name="description">Description</string>
    <string name="empty">Find Nothing</string>
    <string name="cancel">Cancel</string>
    <string name="order">Pay</string>
    <string name="alert_delete">You want remove this item from shopping cart?</string>
    <string name="rate_example">3.5</string>
    <string name="order_confirm">Order Confirm</string>
    <string name="order_dispatch">Order Dispatch</string>
    <string name="order_on_way">Order On the Way</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="empty_txt" />
    <string name="remove">Remove</string>
    <string name="about">Technology</string>

    <string name="about_us">Technologies: \nMaterial Design \nMaterialRatingBar \nEasyBanner \nPicasso \nLoadingIndicatorView \nEventBus \nVolley
        \nBraintree Payment Gateway \nRecyclerView \nDrawerLayout \nNavigationView \nCardView \nAsyncTask \nFragment \nViewPager \nQBadgeView\nDialogFragment
    </string>
    <string name="mobile_verificatin">Mobile num must be 10 digits</string>
    <string name="pwd_verify">Password must be larger than 6 digits</string>
    <string name="alert_not_null">Text field can not be null</string>
    <string name="alert_email_format">Not a valid email format</string>
    <string name="track_order">Track order</string>
    <string name="submit">Submit</string>
    <string name="reset_pwd">Please check email to reset new password</string>
    <string name="order_summary">Order Summary</string>
    <string name="track_my_order">Track my order</string>
    <string name="pay_summary">Payment Summary</string>
    <string name="pay_total">Total Price</string>
    <string name="pay_paid">You Paid</string>
    <string name="pay_paymenttype">PaymentType</string>
    <string name="pay_card">Card Number</string>
    <string name="pay_time">Placed on:</string>
    <string name="pay_address">Delivery address:</string>
    <string name="pay_mobile">Phone#:</string>
    <string name="wish_list">My wish</string>
    <string name="cart_list">"My cart"</string>


</resources>
