<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <ImageButton
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="@dimen/medium_size"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/create_an_account"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/edt_hint_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fname_edt"
            style="@style/LogSignEdtTheme"
            android:hint="@string/first_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/lname_edt"
            style="@style/LogSignEdtTheme"
            android:hint="@string/last_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/address_edt"
            style="@style/LogSignEdtTheme"
            android:hint="@string/address"
            android:inputType="text" />

        <EditText
            android:id="@+id/mobile_edt"
            style="@style/LogSignEdtTheme"
            android:hint="@string/mobile"
            android:inputType="number" />

        <EditText
            android:id="@+id/email_edt"
            style="@style/LogSignEdtTheme"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pwd_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_size"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginStart="@dimen/padding_size"
            android:layout_marginEnd="@dimen/padding_size"
            android:padding="@dimen/normal_size"
            android:textColorHint="@color/edt_hint_color" />

        <Button
            android:id="@+id/signup_btn"
            style="@style/LogSignBtnTheme"
            android:background="@drawable/bg_signup"
            android:textColor="@android:color/white"
            android:text="@string/sign_up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_size"
            android:layout_marginTop="@dimen/normal_size"
            android:gravity="center"
            android:paddingEnd="@dimen/padding_size"
            android:paddingStart="@dimen/padding_size"
            android:text="@string/agreement"
            android:textColor="@color/edt_hint_color"
            android:textSize="@dimen/agreement_size" />

        <Button
            android:id="@+id/login_btn"
            style="@style/LogSignBtnTheme"
            android:text="@string/already_have_an_account"
            android:background="@drawable/bg_hollow"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</ScrollView>