<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <ImageButton
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="@dimen/medium_size"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/update_your_profile"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/edt_hint_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fname_edt"
            style="@style/LogSignEdtTheme"
            android:hint="@string/first_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/lname_edt"
            style="@style/LogSignEdtTheme"
            android:hint="@string/last_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/address_edt"
            style="@style/LogSignEdtTheme"
            android:hint="@string/address"
            android:inputType="text" />

        <EditText
            android:id="@+id/mobile_edt"
            style="@style/LogSignEdtTheme"
            android:hint="@string/mobile"
            android:inputType="number" />

        <EditText
            android:id="@+id/email_edt"
            style="@style/LogSignEdtTheme"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


        <Button
            android:id="@+id/update_btn"
            style="@style/LogSignBtnTheme"
            android:background="@drawable/bg_signup"
            android:text="@string/update"
            android:textColor="@android:color/white" />


        <EditText
            android:id="@+id/reset_mobile_edt"
            style="@style/LogSignEdtTheme"
            android:hint="@string/mobile"
            android:layout_marginTop="@dimen/padding_size"
            android:inputType="number" />

        <EditText
            android:id="@+id/old_pwd_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_size"
            android:layout_marginStart="@dimen/padding_size"
            android:layout_marginTop="@dimen/small_size"
            android:background="@null"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:padding="@dimen/normal_size"
            android:textColorHint="@color/edt_hint_color" />


        <EditText
            android:id="@+id/new_pwd_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_size"
            android:layout_marginStart="@dimen/padding_size"
            android:layout_marginTop="@dimen/small_size"
            android:background="@null"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="@dimen/normal_size"
            android:textColorHint="@color/edt_hint_color" />

        <Button
            android:id="@+id/reset_pwd_btn"
            style="@style/LogSignBtnTheme"
            android:background="@drawable/bg_signup"
            android:text="@string/reset_password"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>