<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/shop"
            android:icon="@drawable/ic_shop"
            android:title="@string/shop"
            app:showAsAction="always" />
        <item
            android:id="@+id/order"
            android:icon="@drawable/ic_order"
            android:title="@string/my_order"
            app:showAsAction="always" />
    </group>
    <group android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            app:showAsAction="ifRoom" />
    </group>
</menu>