<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_item_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/checkout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_size"
            android:background="@color/colorPrimary"
            android:text="@string/check_out"
            android:textColor="@android:color/white" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/checkout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:visibility="gone">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/small_size"
            android:background="@color/gray4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/coupon_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_size"
                android:layout_weight="1"
                android:background="@drawable/bg_edt"
                android:hint="@string/coupon_code"
                android:paddingEnd="@dimen/normal_size"
                android:paddingStart="@dimen/normal_size" />

            <Button
                android:id="@+id/coupon_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_size"
                android:background="@color/colorPrimary"
                android:text="@string/apply"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout style="@style/CheckOutLinearLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tax"
                android:textColor="@color/gray4" />

            <TextView
                android:id="@+id/tax_total_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="$0"
                android:textColor="@color/gray4" />
        </LinearLayout>

        <LinearLayout style="@style/CheckOutLinearLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delivery"
                android:textColor="@color/gray4" />

            <TextView
                android:id="@+id/deli_total_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="$0"
                android:textColor="@color/gray4" />
        </LinearLayout>

        <LinearLayout style="@style/CheckOutLinearLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total"
                android:textColor="@color/gray4" />

            <TextView
                android:id="@+id/total_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="$0"
                android:textColor="@color/gray4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_size"
            android:orientation="horizontal">

            <Button
                android:id="@+id/checkout_confirm_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_size"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/confirm"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/checkout_cancel_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_size"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/cancel"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
