<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:elevation="1dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_pic"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_size"
                android:padding="@dimen/padding_size"
                android:src="@drawable/bt_ic_camera" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/like_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_size"
                    android:layout_marginStart="@dimen/medium_size"
                    android:src="@drawable/selector_like"
                    android:background="@null"/>

                <TextView
                    android:id="@+id/product_title_tv"
                    style="@style/ProductDetailTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/example"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <TextView
                android:id="@+id/product_price_tv"
                style="@style/ProductDetailTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$113.99" />

            <View
                style="@style/ProductDetailTheme"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray3" />

            <TextView
                style="@style/ProductDetailTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />


            <TextView
                android:id="@+id/product_desc_tv"
                style="@style/ProductDetailTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/normal_size"
                android:drawableStart="@drawable/dot_desc"
                android:text="this is desc" />

            <View
                style="@style/ProductDetailTheme"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_size"
                android:orientation="horizontal"
                android:paddingStart="@dimen/medium_size">

                <TextView
                    android:id="@+id/rating_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black0"
                    android:paddingBottom="@dimen/small_size"
                    android:paddingEnd="@dimen/normal_size"
                    android:paddingStart="@dimen/normal_size"
                    android:paddingTop="@dimen/small_size"
                    android:text="@string/rate_example"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/rating_rb"
                    style="@style/Widget.MaterialRatingBar.RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_size"
                    android:layout_marginStart="@dimen/padding_size"
                    android:rating="2.5" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/medium_size"
                android:background="@color/gray3" />
        </LinearLayout>

        <Button
            android:id="@+id/add_cart_tbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_size"
            android:layout_marginEnd="@dimen/normal_size"
            android:layout_marginStart="@dimen/normal_size"
            android:layout_marginTop="@dimen/medium_size"
            android:background="@color/colorPrimary"
            android:text="add to cart"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>